Fixes long word wrap on browse pages

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /**
  * Correct `block` display not defined in IE 8/9.
  */
-/* line 22, sass/_normalize.scss */
+/* line 11, sass/_normalize.scss */
 article,
 aside,
 details,
@@ -24,7 +24,7 @@ summary {
 /**
  * Correct `inline-block` display not defined in IE 8/9.
  */
-/* line 32, sass/_normalize.scss */
+/* line 30, sass/_normalize.scss */
 audio,
 canvas,
 video {
@@ -89,7 +89,7 @@ a:focus {
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
-/* line 95, sass/_normalize.scss */
+/* line 94, sass/_normalize.scss */
 a:active,
 a:hover {
   outline: 0;
@@ -119,7 +119,7 @@ abbr[title] {
 /**
  * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 126, sass/_normalize.scss */
+/* line 125, sass/_normalize.scss */
 b,
 strong {
   font-weight: bold;
@@ -155,7 +155,7 @@ mark {
 /**
  * Correct font family set oddly in Safari 5 and Chrome.
  */
-/* line 164, sass/_normalize.scss */
+/* line 161, sass/_normalize.scss */
 code,
 kbd,
 pre,
@@ -191,7 +191,7 @@ small {
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
-/* line 198, sass/_normalize.scss */
+/* line 197, sass/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -270,7 +270,7 @@ legend {
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 278, sass/_normalize.scss */
+/* line 275, sass/_normalize.scss */
 button,
 input,
 select,
@@ -287,7 +287,7 @@ textarea {
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-/* line 290, sass/_normalize.scss */
+/* line 289, sass/_normalize.scss */
 button,
 input {
   line-height: normal;
@@ -299,7 +299,7 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-/* line 302, sass/_normalize.scss */
+/* line 301, sass/_normalize.scss */
 button,
 select {
   text-transform: none;
@@ -312,7 +312,7 @@ select {
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others.
  */
-/* line 317, sass/_normalize.scss */
+/* line 314, sass/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -326,7 +326,7 @@ input[type="submit"] {
 /**
  * Re-set default cursor for disabled elements.
  */
-/* line 327, sass/_normalize.scss */
+/* line 326, sass/_normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
@@ -336,7 +336,7 @@ html input[disabled] {
  * 1. Address box sizing set to `content-box` in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
  */
-/* line 337, sass/_normalize.scss */
+/* line 336, sass/_normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
@@ -364,7 +364,7 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-/* line 361, sass/_normalize.scss */
+/* line 360, sass/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -373,7 +373,7 @@ input[type="search"]::-webkit-search-decoration {
 /**
  * Remove inner padding and border in Firefox 4+.
  */
-/* line 370, sass/_normalize.scss */
+/* line 369, sass/_normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -406,7 +406,7 @@ table {
 
 @media screen {
   /* == Imports == */
-  /* line 9, sass/_screen.scss */
+  /* line 2, sass/_screen.scss */
   html, body, div, span, applet, object, iframe,
   h1, h2, h3, h4, h5, h6, p, blockquote, pre,
   a, abbr, acronym, address, big, cite, code,
@@ -450,7 +450,7 @@ table {
     font-weight: normal;
   }
 
-  /* line 41, sass/_screen.scss */
+  /* line 40, sass/_screen.scss */
   blockquote:before, blockquote:after,
   q:before, q:after {
     content: "";
@@ -878,6 +878,7 @@ table {
     margin-top: 3px;
     font-size: 1.2em;
     line-height: 1.35em;
+    word-break: break-all;
   }
 
   /* line 226, sass/_screen.scss */
@@ -912,7 +913,7 @@ table {
     overflow: hidden;
     *zoom: 1;
   }
-  /* line 38, ../../../../../lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+  /* line 38, ../../../../../../home/ken/.rbenv/versions/2.0.0-p0/lib/ruby/gems/2.0.0/gems/compass-core-1.0.0.alpha.19/stylesheets/compass/utilities/general/_clearfix.scss */
   #content:after {
     content: "";
     display: table;
@@ -922,7 +923,7 @@ table {
   #content > div, #content nav {
     *zoom: 1;
   }
-  /* line 38, ../../../../../lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+  /* line 38, ../../../../../../home/ken/.rbenv/versions/2.0.0-p0/lib/ruby/gems/2.0.0/gems/compass-core-1.0.0.alpha.19/stylesheets/compass/utilities/general/_clearfix.scss */
   #content > div:after, #content nav:after {
     content: "";
     display: table;
@@ -953,7 +954,7 @@ table {
     clear: both;
     *zoom: 1;
   }
-  /* line 38, ../../../../../lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+  /* line 38, ../../../../../../home/ken/.rbenv/versions/2.0.0-p0/lib/ruby/gems/2.0.0/gems/compass-core-1.0.0.alpha.19/stylesheets/compass/utilities/general/_clearfix.scss */
   #primary-nav:after {
     content: "";
     display: table;
@@ -1380,8 +1381,8 @@ table {
   #primary-nav li ul li {
     width: 100%;
     clear: both;
-    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
   /* line 52, sass/_screen_768.scss */
